--- a/_config.yml
+++ b/_config.yml
@@ -108,7 +108,7 @@ analytics:
 author:
   name             : "Brownie Choco"
   avatar           : # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
-  bio              : # "YOLO"
+  bio              : "YOLO - You Only Live Online"
   location         : # "Korea, Seoul"
   email            :
   links:
