--- a/_config.yml
+++ b/_config.yml
@@ -16,10 +16,10 @@ minimal_mistakes_skin    : "default" # "air", "aqua", "contrast", "dark", "dirt"
 
 # Site Settings
 locale                   : "en-US"
-title                    : "Laboratory in a mess"
+title                    : "LaboMan's Blog"
 title_separator          : "-"
-name                     : "Brownie Choco"
-description              : "Contact Info Site"
+name                     : "LaboMan"
+description              : "Laboratory in a mess"
 url                      : "https://browniechoco.github.io" # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : # the subpath of your site, e.g. "/blog"
 repository               : # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
@@ -106,10 +106,10 @@ analytics:
 
 # Site Author
 author:
-  name             : "Brownie Choco"
+  name             : "LaboMan"
   avatar           : # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
-  bio              : "YOLO - You Only Live Online"
-  location         : # "Korea, Seoul"
+  bio              : ""
+  location         : "Korea, Seoul"
   email            :
   links:
     - label: "Email"
