--- a/_config.yml
+++ b/_config.yml
@@ -117,7 +117,7 @@ author:
       url: mailto:labomancontact@gmail.com
     - label: "GitHub"
       icon: "fab fa-fw fa-github"
-      url: "https://browniechoco.github.io"
+      url: "https://github.com/browniechoco"
 
 # Site Footer
 footer:
